--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,9 @@ import Link from "../components/link.astro";
 import PostTitle from "../components/postTitle.astro";
 import type { Frontmatter } from "./types";
 
-const posts = await Astro.glob<Frontmatter>("../content/posts/**/*.mdx");
+
+
+const posts = await Astro.glob("../content/posts/**/*.mdx");
 posts.sort((a, b) => {
   return Date.parse(a.frontmatter.date) < Date.parse(b.frontmatter.date)
     ? 1
@@ -14,6 +16,7 @@ posts.sort((a, b) => {
 
 <Layout>
   <div class="relative -top-[10px] flex flex-col gap-8">
+    <div>hello world</div>
     {
       posts.map((item) => {
         return (
